--- a/Final Project/Final Project.csproj
+++ b/Final Project/Final Project.csproj
@@ -4,6 +4,7 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <RootNamespace>Final_Project</RootNamespace>
+    <StartupObject />
   </PropertyGroup>
 
 </Project>
